usr.sbin/bhyve/pci_fbuf.c
@@ -317,7 +317,7 @@ pci_fbuf_parse_opts(struct pci_fbuf_softc *sc, char *opts)
 	}
 
 done:
-	free(uopts);
+	free(uoptsbak);
 	return (ret);
 }
 
